# irrKillerCow

./: .gitignore  README.md
Android/KillerCowApp3/: settings.gradle
Android/KillerCowApp3/app/: .gitignore  build.gradle
Android/KillerCowApp3/app/debug/: output-metadata.json
Android/KillerCowApp3/app/release/: output-metadata.json
Android/KillerCowApp3/app/src/androidTest/java/com/example/killercowapp3/: ExampleInstrumentedTest.java
Android/KillerCowApp3/app/src/main/: AndroidManifest.xml
Android/KillerCowApp3/app/src/main/cpp/: BigEnemy.cpp  BigEnemy.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyOrb.cpp  Helper.h  LightningSceneNode.h  Player.cpp  Player.h  android_tools.cpp  main.cpp
Android/KillerCowApp3/app/src/main/java/com/albongames/killercowapp3/: MainActivity.java
Android/KillerCowApp3/app/src/main/java/com/example/killercowapp3/: MainActivity.java
Android/KillerCowApp3/app/src/main/res/values/: strings.xml
Android/KillerCowApp3/app/src/test/java/com/example/killercowapp3/: ExampleUnitTest.java
Android/KillerCowApp3/gradle/wrapper/: gradle-wrapper.properties
Linux/: .gitignore  Makefile  New Text Document.txt  config.txt
PSP/: BigEnemy.cpp  BigEnemy.h  CTextureFont.cpp  CTextureFont.hpp  Cutscene.h  EBOOT.PBP  ER.h  Enemy.cpp  Enemy.h  EnemyOrb.cpp  EnemyOrb.h  Helper.h  LightningSceneNode.h  Makefile  PARAM.SFO  Player.cpp  Player.h  killercow.elf  main.cpp
PSP/PSP_lib_replacement/: Readme.txt
PSP/media/cow/: big_cow_cap.md2  big_cow_cap.ugh  bigcow.md2  bigcow.ugh  cow.md2
PSP/media/player/: player.md2
SamplyGame/: SamplyGame.cs
SamplyGame.Desktop/: Program.cs
SamplyGame.Droid/: SamplyGame.Droid.csproj
SamplyGame.Droid/Resources/: Resource.designer.cs
SamplyGame/Aircrafts/: Player.cs
SamplyGame/Weapons/: Apple.cs
Windows/KillerCowAppWin/: .gitignore  BigEnemy.cpp  BigEnemy.h  Cutscene.h  ER.h  Enemy.cpp  Enemy.h  EnemyOrb.cpp  EnemyOrb.h  Helper.h  KillerCowAppWin.sln  KillerCowAppWin.vcxproj  KillerCowAppWin.vcxproj.filters  LightningSceneNode.h  Player.cpp  Player.h  main.cpp
